--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
 = Text Ferry
+{<img src="https://badge.fury.io/rb/text_ferry.svg" alt="Gem Version" />}[http://badge.fury.io/rb/text_ferry]
+
 Text Ferry is a super simple DSL for quickly loading CSV text files into a
 database.
 
